[ YC-986 ] Enhance domain model to use I18n component
- domain models fully use I18nModel where needed
- country + state models now have fully functional i18n display names
- refactoring on the admin app to utilise i18n models
- new LocationVO interface for dealing with country/state in admin app
- refactoring for inventory view to visualise restock notes
- improved promotion tester (missed supplier setting)